[gd_scene load_steps=5 format=2]

[ext_resource path="res://NPCs/Hostile/Enemies/VikingMage/Fireball.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Weapons/fireball.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 10.4758

[sub_resource type="Animation" id=2]
resource_name = "fire"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="Fireball" type="Area2D" groups=[
"arrow",
]]
collision_layer = 512
collision_mask = 75
script = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.687103, -0.489659 )
scale = Vector2( 0.356785, 0.528521 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 4.80111, 6.13882 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )
hframes = 4
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.146198, -0.730976 )
rotation = 1.5708
scale = Vector2( 1.03378, 0.643328 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fire = SubResource( 2 )

[connection signal="area_entered" from="." to="." method="_on_Fireball_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Fireball_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
